# Graduation-Project

Sigle_Car/: CMakeLists.txt  package.xml
Sigle_Car/config/: joint_names_单节车体简化版本.SLDASM.yaml
Sigle_Car/launch/: display.launch  gazebo.launch
Sigle_Car/meshes/: W_left_Link.STL  W_right_Link.STL
Sigle_Car/urdf/: 单节车体简化版本.SLDASM.csv  单节车体简化版本.SLDASM.urdf
Single_car/: CMakeLists.txt  package.xml
Single_car/config/: joint_names_Single_car.yaml
Single_car/launch/: display.launch  gazebo.launch
Single_car/meshes/: W_left_Link.STL  W_right_Link.STL
Single_car/urdf/: Singel_car.csv  Singel_car.urdf  Single_car.csv  Single_car.urdf  Single_car.usd
Single_car/urdf/Single_car/configuration/: Single_car_physics.usd  Single_car_robot.usd  (+1 more)
Spherical_Parallel_urdf_2/: CMakeLists.txt  package.xml
Spherical_Parallel_urdf_2/config/: joint_names_Spherical_Parallel_urdf_2.yaml
Spherical_Parallel_urdf_2/launch/: display.launch  gazebo.launch
Spherical_Parallel_urdf_2/meshes/: base_link.STL  inner_plain_1_Link.STL  inner_plain_2_Link.STL  inner_plain_3_Link.STL  middle-inner_1_Link.STL  middle-inner_2_Link.STL  middle-inner_3_Link.STL  motor-outer_1_Link.STL  motor-outer_2_Link.STL  motor-outer_3_Link.STL  outer-middle_1_Link.STL  outer-middle_2_Link.STL  outer-middle_3_Link.STL
Spherical_Parallel_urdf_2/urdf/: Spherical_Parallel_urdf_2.csv  Spherical_Parallel_urdf_2.urdf
complete_car/: CMakeLists.txt  package.xml
complete_car/launch/: display.launch  gazebo.launch
complete_car/urdf/: complete_car.csv  complete_car.urdf
modifed-20260101/: single_car.usd
